Fixed margin spacing on mobile screens

--- a/css/style.css
+++ b/css/style.css
@@ -1034,16 +1034,12 @@ h5 {
   transition-duration: 500ms;
 }
 
-.duration-200 {
-  transition-duration: 200ms;
-}
-
-.duration-1000 {
-  transition-duration: 1000ms;
-}
-
 .duration-700 {
   transition-duration: 700ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
 }
 
 .item-container {
@@ -1160,6 +1156,14 @@ h5 {
 
   .md\:mt-4 {
     margin-top: 1rem;
+  }
+
+  .md\:mt-36 {
+    margin-top: 9rem;
+  }
+
+  .md\:mt-28 {
+    margin-top: 7rem;
   }
 
   .md\:block {
